--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,10 @@
   <body>
     <header>
       <h1>📚 Delve Data Room</h1>
+      <div class="user-section">
+        <input id="username-input" type="text" placeholder="Enter username..." />
+        <button id="set-username-btn">Set Username</button>
+      </div>
       <input id="file-input" type="file" multiple style="display: none;" />
       <button id="upload-btn">Upload</button>
       <button id="refresh-btn">🔄 Refresh Chat</button>
